--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "start": "node pages/api/index.js"
       },
       "dependencies": {
-        "@hebcal/hebcal-js": "^4.2.0",
+        "@hebcal/core": "^4.0.0",
         "express": "^4.18.2",
         "cors": "^2.8.5"
       }
