--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
     {
-      "name": "astrovision-date-api-cli",
+      "name": "astrovision-date-api-prod",
       "version": "1.0.0",
       "description": "API for converting Gregorian and Hebrew dates",
-      "main": "pages/api/index.js",
-      "type": "module",
+      "main": "index.js",
+      "type": "commonjs",
       "scripts": {
-        "build": "echo 'No build step needed for functions'",
-        "start": "node pages/api/index.js"
+        "start": "node index.js"
       },
       "dependencies": {
-        "@hebcal/core": "^4.0.0",
+        "@hebcal/core": "^2.4.1",
         "express": "^4.18.2",
         "cors": "^2.8.5"
       }
